--- a/src/main/resources/templates/layouts/Master/designation.html
+++ b/src/main/resources/templates/layouts/Master/designation.html
@@ -19,114 +19,125 @@
 		<div>
 			<div th:replace="fragments/header :: header">...</div>
 			<div th:replace="fragments/sidebar :: sidebar">...</div>
-			<section class="content-wrapper">
-				<div class="row">
-					<!-- left column -->
-					<div class="col-md-12">
-						<div class="col-md-3">
-						</div>
+
+			<div class="wrapper">
+
+				<section class="content-wrapper">
+
+					<!-- Content Header (Page header) -->
+					<section class="content-header">
+						<h4>
+							Designation Master
+							<!--<small>it all starts here</small>-->
+						</h4>
+						<ol class="breadcrumb">
+							<li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
+							<li><a href="#">Examples</a></li>
+							<li class="active">Blank page</li>
+						</ol>
+					</section>
 
 
-						<div class="col-md-6" style="margin-top: 20px;">
+					<!-- Main content -->
+					<section class="content">
 
-							<div class="box box-primary">
-								<div class="box-header with-border">
-									<h3 class="box-title">Designation Master</h3>
+						<!-- Default box -->
+						<div class="box">
+
+
+
+							<div class="row">
+								<!-- left column -->
+								<div class="col-md-12">
+									<div class="col-md-2">
+									</div>
+
+
+									<div class="col-md-8 shadow bg-white rounded" style="margin-top: 20px;">
+										<!-- general form elements -->
+										<div class="box box-primary">
+											<div class="box-header with-border">
+												<!--<h3 class="box-title">Category Master</h3>-->
+											</div><!-- /.box-header -->
+											<!-- form start -->
+											<form role="form" th:action="@{/designation/}" method="POST"
+												th:object="${designation}">
+												<div class="box-body">
+
+													<div class="form-group col-md-6">
+														<label for="inputEmail4">Designation Code</label> <input
+															type="text" class="form-control"
+															placeholder="designation code" th:field="*{desigCode}">
+													</div>
+													<div class="form-group col-md-6">
+														<label for="inputPassword4">Designation Name</label> <input
+															type="text" class="form-control"
+															placeholder="designation name" th:field="*{desigName}">
+													</div>
+
+													<div class="form-group col-md-12">
+														<label for="inputEmail4">Pay Scale Code</label> <input
+															type="text" class="form-control"
+															placeholder="pay scale code" th:field="*{payScaleCode}">
+													</div>
+													<div class="form-group col-md-6">
+														<label for="inputPassword4">Basic Slab 1</label> <input
+															type="number" class="form-control"
+															placeholder="basic slab 1" th:field="*{basicSlab1}">
+													</div>
+
+													<div class="form-group col-md-6">
+														<label for="inputEmail4">Basic Slab 2</label> <input
+															type="number" class="form-control"
+															placeholder="basic slab 2" th:field="*{basicSlab2}">
+													</div>
+
+													<div class="form-group col-md-12">
+														<label for="inputEmail4">Basic Slab 3</label> <input
+															type="number" class="form-control"
+															placeholder="basic slab 3" th:field="*{basicSlab3}">
+													</div>
+
+													<div class="form-group col-md-6">
+														<label for="inputEmail4">Increment1</label> <input type="number"
+															class="form-control" placeholder="increement 1"
+															th:field="*{increment1}">
+													</div>
+
+													<div class="form-group col-md-6">
+														<label for="inputEmail4">Increment2</label> <input type="number"
+															class="form-control" placeholder="increement 2"
+															th:field="*{increment2}">
+													</div>
+
+												</div><!-- /.box-body -->
+
+												<div class="box-footer" style="margin: 10px">
+													<input type="submit" value="Submit" class="btn btn-primary" />
+													<input type="reset" value="Reset" class="btn btn-danger" />
+												</div>
+
+
+											</form>
+
+
+										</div><!-- /.box -->
+										<div style="width: parent; text-align-last: right; margin:8px">
+											<a th:href="@{/designation/list}">View All Designation</a>
+										</div>
+									</div>
+
+
+									<div class="col-md-2">
+									</div>
 								</div>
-								<!-- form start -->
 
-
-								<form role="form" th:action="@{/designation/}" method="POST" th:object="${designation}">
-									<div class="box-body">
-
-										<div class="form-group col-md-12">
-											<label for="inputEmail4">Designation Code</label> <input type="text"
-												class="form-control" placeholder="designation code"
-												th:field="*{desigCode}">
-										</div>
-										<div class="form-group col-md-12">
-											<label for="inputPassword4">Designation Name</label> <input type="text"
-												class="form-control" placeholder="designation name"
-												th:field="*{desigName}">
-										</div>
-
-										<div class="form-group col-md-12">
-											<label for="inputEmail4">Pay Scale Code</label> <input type="text"
-												class="form-control" placeholder="pay scale code"
-												th:field="*{payScaleCode}">
-										</div>
-										<div class="form-group col-md-6">
-											<label for="inputPassword4">Basic Slab 1</label> <input type="number"
-												class="form-control" placeholder="basic slab 1"
-												th:field="*{basicSlab1}">
-										</div>
-
-										<div class="form-group col-md-6">
-											<label for="inputEmail4">Basic Slab 2</label> <input type="number"
-												class="form-control" placeholder="basic slab 2"
-												th:field="*{basicSlab2}">
-										</div>
-
-										<div class="form-group col-md-12">
-											<label for="inputEmail4">Basic Slab 3</label> <input type="number"
-												class="form-control" placeholder="basic slab 3"
-												th:field="*{basicSlab3}">
-										</div>
-
-										<div class="form-group col-md-6">
-											<label for="inputEmail4">Increment1</label> <input type="number"
-												class="form-control" placeholder="increement 1"
-												th:field="*{increment1}">
-										</div>
-
-										<div class="form-group col-md-6">
-											<label for="inputEmail4">Increment2</label> <input type="number"
-												class="form-control" placeholder="increement 2"
-												th:field="*{increment2}">
-										</div>
-
-										<div class="form-group" style="margin: 10px;">
-
-											<div class="form-check form-check-inline">
-												<input class="form-check-input" type="radio" name="inlineRadioOptions"
-													id="inlineRadio1" value="Y"> <label class="form-check-label"
-													for="inlineRadio1">Active</label>
-											</div>
-
-											<div class="form-check form-check-inline">
-												<input class="form-check-input" type="radio" name="inlineRadioOptions"
-													id="inlineRadio1" value="N"> <label class="form-check-label"
-													for="inlineRadio1">In-Active</label>
-											</div>
-
-										</div>
-
-
-
-									</div>
-
-									<div class="box-footer">
-										<input type="submit" value="Submit" class="btn btn-primary" />
-										<input type="reset" value="Reset" class="btn btn-danger" />
-									</div>
-									<a th:href="@{/designation/list}">view designation list</a>
-								</form>
 							</div>
 
-							<div class="box-footer">
-								<button type="submit" class="btn btn-primary">Submit</button>
-							</div>
-
-
 						</div>
-
-
-						<div class="col-md-3">
-						</div>
-					</div>
-
-				</div>
-			</section>
+					</section>
+				</section>
+			</div>
 
 			<div th:replace="fragments/footer :: footer">...</div>
 			<!--   <section class="content">
