--- a/src/main/resources/templates/layouts/editview/editDesignation.html
+++ b/src/main/resources/templates/layouts/editview/editDesignation.html
@@ -1,158 +1,153 @@
 <!DOCTYPE html>
+<html>
 
-<!--  main-fragment (title, otherStaticResources, header, nav, mainContent, footer)  -->
-<html xmlns:th="http://www.thymeleaf.org"
-	th:replace="~{layouts/main-layout :: main-fragment(  
-                                                ~{::title},
-                                                ~{:: #home-static-resources},
-                                                ~{:: #home-header},
-                                                ~{:: #home-nav},
-                                                ~{:: #home-main-content},  
-                                                ~{:: #home-footer}
-                                               )}">
-
-<head>
-<title>Title of Home Page</title>
-
-<th:block id="home-static-resources">
-
-	<script type="text/javascript" src="../static/home.js"
-		th:src="@{/home.js}"></script>
-	<link rel="stylesheet" type="text/css" href="../static/home.css"
-		th:href="@{/home.css}" />
-
-</th:block>
+<head xmlns:th="http://www.thymeleaf.org">
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<title>AdminLTE 2 | General Form Elements</title>
+	<meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+	<link rel="stylesheet" href="../../css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+	<link rel="stylesheet" href="../../css/AdminLTE.min.css" th:href="@{/css/AdminLTE.min.css}">
+	<link rel="stylesheet" href="../../css/skins/_all-skins.min.css" th:href="@{/css/skins/_all-skins.min.css}">
 
 </head>
-<body>
 
-	<div id="home-header">ERP WhareHouse</div>
+<body class="hold-transition skin-blue sidebar-mini">
+	<div class="wrapper">
+		<div>
+			<div th:replace="fragments/header :: header">...</div>
+			<div th:replace="fragments/sidebar :: sidebar">...</div>
 
-	<div id="home-nav"
-		th:replace="~{fragments/app-fragments :: nav-default}">Home Nav
-	</div>
+			<div class="wrapper">
+
+				<section class="content-wrapper">
+
+					<!-- Content Header (Page header) -->
+					<section class="content-header">
+						<h4>
+							Designation Master
+							<!--<small>it all starts here</small>-->
+						</h4>
+						<ol class="breadcrumb">
+							<li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
+							<li><a href="#">Examples</a></li>
+							<li class="active">Blank page</li>
+						</ol>
+					</section>
 
 
+					<!-- Main content -->
+					<section class="content">
 
-
-
-	<div id="home-main-content">
-
-		<h3>Designation Master</h3>
-
-
-		<form th:action="@{/designation/}" method="POST" th:object="${designation}">
-			<div class="form-border">
-
-				<div class="row">
-					<div class="form-group col-md-6">
-						<label for="inputEmail4">Designation Code</label> <input type="text"
-							class="form-control" placeholder="city code"
-							th:field="*{desigCode}">
-					</div>
-					<div class="form-group col-md-6">
-						<label for="inputPassword4">Designation Name</label> <input type="text"
-							class="form-control" placeholder="city name"
-							th:field="*{desigName}">
-					</div>
-
-				</div>
-				
-				<div class="row">
-					<div class="form-group col-md-6">
-						<label for="inputEmail4">Pay Scale Code</label> <input type="text"
-							class="form-control" placeholder="city code"
-							th:field="*{payScaleCode}">
-					</div>
-					<div class="form-group col-md-6">
-						<label for="inputPassword4">Basic Slab-1</label> <input type="text"
-							class="form-control" placeholder="city name"
-							th:field="*{basicSlab1}">
-					</div>
-
-				</div>
-				
-				<div class="row">
-					<div class="form-group col-md-6">
-						<label for="inputEmail4">Basic Slab-2</label> <input type="text"
-							class="form-control" placeholder="city code"
-							th:field="*{basicSlab2}">
-					</div>
-					<div class="form-group col-md-6">
-						<label for="inputPassword4">Basic slab-3</label> <input type="text"
-							class="form-control" placeholder="city name"
-							th:field="*{basicSlab3}">
-					</div>
-
-				</div>
-				
-				<div class="row">
-					<div class="form-group col-md-6">
-						<label for="inputEmail4">Increment-1</label> <input type="text"
-							class="form-control" placeholder="city code"
-							th:field="*{increment1}">
-					</div>
-					<div class="form-group col-md-6">
-						<label for="inputPassword4">Increment-2</label> <input type="text"
-							class="form-control" placeholder="city name"
-							th:field="*{increment1}">
-					</div>
-
-				</div>
-				
-				
-
-				
-				
-			
+						<!-- Default box -->
+						<div class="box">
 
 
 
-				<div class="form-group" style="margin: 10px;">
+							<div class="row">
+								<!-- left column -->
+								<div class="col-md-12">
+									<div class="col-md-2">
+									</div>
 
-					<div class="form-check form-check-inline">
-						<input class="form-check-input" type="radio"
-							name="inlineRadioOptions" id="inlineRadio1" value="Y"> <label
-							class="form-check-label" for="inlineRadio1"
-							>Active</label>
-					</div>
 
-					<div class="form-check form-check-inline">
-						<input class="form-check-input" type="radio"
-							name="inlineRadioOptions" id="inlineRadio1" value="N"> <label
-							class="form-check-label" for="inlineRadio1"
-							>In-Active</label>
-					</div>
+									<div class="col-md-8 shadow bg-white rounded" style="margin-top: 20px;">
+										<!-- general form elements -->
+										<div class="box box-primary">
+											<div class="box-header with-border">
+												<!--<h3 class="box-title">Category Master</h3>-->
+											</div><!-- /.box-header -->
+											<!-- form start -->
+											<form role="form" th:action="@{/designation/}" method="POST"
+												th:object="${designation}">
+												<div class="box-body">
 
-				</div>
+													<div class="form-group col-md-6">
+														<label for="inputEmail4">Designation Code</label> <input
+															type="text" class="form-control"
+															placeholder="designation code" th:field="*{desigCode}">
+													</div>
+													<div class="form-group col-md-6">
+														<label for="inputPassword4">Designation Name</label> <input
+															type="text" class="form-control"
+															placeholder="designation name" th:field="*{desigName}">
+													</div>
 
-				<div class="row" style="margin: 10px">
-					<input type="submit" value="Submit" class="btn btn-primary" />
-					<input type="reset" value="Reset" class="btn btn-danger" />
-				</div>
+													<div class="form-group col-md-12">
+														<label for="inputEmail4">Pay Scale Code</label> <input
+															type="text" class="form-control"
+															placeholder="pay scale code" th:field="*{payScaleCode}">
+													</div>
+													<div class="form-group col-md-6">
+														<label for="inputPassword4">Basic Slab 1</label> <input
+															type="number" class="form-control"
+															placeholder="basic slab 1" th:field="*{basicSlab1}">
+													</div>
 
+													<div class="form-group col-md-6">
+														<label for="inputEmail4">Basic Slab 2</label> <input
+															type="number" class="form-control"
+															placeholder="basic slab 2" th:field="*{basicSlab2}">
+													</div>
+
+													<div class="form-group col-md-12">
+														<label for="inputEmail4">Basic Slab 3</label> <input
+															type="number" class="form-control"
+															placeholder="basic slab 3" th:field="*{basicSlab3}">
+													</div>
+
+													<div class="form-group col-md-6">
+														<label for="inputEmail4">Increment1</label> <input type="number"
+															class="form-control" placeholder="increement 1"
+															th:field="*{increment1}">
+													</div>
+
+													<div class="form-group col-md-6">
+														<label for="inputEmail4">Increment2</label> <input type="number"
+															class="form-control" placeholder="increement 2"
+															th:field="*{increment2}">
+													</div>
+
+												</div><!-- /.box-body -->
+
+												<div class="box-footer" style="margin: 10px">
+													<input type="submit" value="Submit" class="btn btn-primary" />
+													<input type="reset" value="Reset" class="btn btn-danger" />
+												</div>
+
+
+											</form>
+
+
+										</div><!-- /.box -->
+										<div style="width: parent; text-align-last: right; margin:8px">
+											<a th:href="@{/designation/list}">View All Designation</a>
+										</div>
+									</div>
+
+
+									<div class="col-md-2">
+									</div>
+								</div>
+
+							</div>
+
+						</div>
+					</section>
+				</section>
 			</div>
-		</form>
 
-		<div class="row text-right m-10">
-			<a th:href="@{/designation/list}">view designation list</a>
-		</div>
-	</div>
-
-
-
-
-
-
-
-
-
-
-
-	<!-- <div id="home-footer" th:replace="~{/fragments/app-fragments :: copyright}">
-        Footer
-    </div> -->
-
-
+			<div th:replace="fragments/footer :: footer">...</div>
+			<!--   <section class="content">
+        
+        </section>-->
+			<script src="../../js/jQuery-2.1.4.min.js" th:src="@{/js/jQuery-2.1.4.min.js}"></script>
+			<script src="../../js/bootstrap.min.js" th:src="@{/js/bootstrap.min.js}"></script>
+			<script src="../../js/fastclick.min.js" th:src="@{/js/fastclick.min.js}"></script>
+			<script src="../../js/app.min.js" th:src="@{/js/app.min.js}"></script>
+			<script src="../../js/demo.js" th:src="@{/js/demo.js}"></script>
 </body>
+
 </html>
