--- a/src/main/resources/templates/layouts/editview/editOpenIndent.html
+++ b/src/main/resources/templates/layouts/editview/editOpenIndent.html
@@ -1,177 +1,238 @@
 <!DOCTYPE html>
+<html>
 
-<!--  main-fragment (title, otherStaticResources, header, nav, mainContent, footer)  -->
-<html xmlns:th="http://www.thymeleaf.org" th:replace="~{layouts/main-layout :: main-fragment(  
-                                                ~{::title},
-                                                ~{:: #home-static-resources},
-                                                ~{:: #home-header},
-                                                ~{:: #home-nav},
-                                                ~{:: #home-main-content},  
-                                                ~{:: #home-footer}
-                                               )}">
+<head xmlns:th="http://www.thymeleaf.org">
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<title>AdminLTE 2 | General Form Elements</title>
+	<meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+	<link rel="stylesheet" href="../../css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+	<link rel="stylesheet" href="../../css/AdminLTE.min.css" th:href="@{/css/AdminLTE.min.css}">
+	<link rel="stylesheet" href="../../css/skins/_all-skins.min.css" th:href="@{/css/skins/_all-skins.min.css}">
 
-<head>
-	<title>Title of Home Page</title>
 
-	<th:block id="home-static-resources">
+	<style>
+		.form-control-sm {
+			height: 30px;
+			width: 120px;
 
-		<script type="text/javascript" src="../static/home.js" th:src="@{/home.js}"></script>
-		<link rel="stylesheet" type="text/css" href="../static/home.css" th:href="@{/home.css}" />
+		}
 
-	</th:block>
+		.select {
+			width: 130px;
+			font-size: 10px;
+		}
+	</style>
 
 </head>
 
-<body>
+<body class="hold-transition skin-blue sidebar-mini">
+	<div class="wrapper">
+		<div>
+			<div th:replace="fragments/header :: header">...</div>
+			<div th:replace="fragments/sidebar :: sidebar">...</div>
 
-	<div id="home-header">ERP WhareHouse</div>
+			<div class="wrapper">
 
-	<div id="home-nav" th:replace="~{fragments/app-fragments :: nav-default}">Home Nav
-	</div>
+				<section class="content-wrapper">
+
+					<!-- Content Header (Page header) -->
+					<section class="content-header">
+						<h4>
+							Open Indent
+							<!--<small>it all starts here</small>-->
+						</h4>
+						<ol class="breadcrumb">
+							<li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
+							<li><a href="#">Examples</a></li>
+							<li class="active">Blank page</li>
+						</ol>
+					</section>
 
 
+					<!-- Main content -->
+					<section class="content">
 
-
-
-	<div id="home-main-content">
-
-		<h3>Open Indent</h3>
-
-
-		<form th:action="@{/openindent/}" method="POST" th:object="${openIndent}">
-
-
-			<div class="form-border">
-				<h5>Indent Detail</h5>
-				<div class="form-row">
-					<div class="form-group col-md-4">
-						<label for="inputEmail4">Indent Number</label> <input type="text" class="form-control"
-							id="inputEmail4" placeholder="indent number" th:field="*{indentNumber}">
-					</div>
-					<div class="form-group col-md-4">
-						<label for="inputPassword4">Indent Date</label> <input type="date" class="form-control"
-							id="inputPassword4" placeholder="indent date" th:field="*{indentDate}">
-					</div>
-					<div class="form-group col-md-4">
-						<label class="form-label">Employee Code</label> <label style="color: red">*</label> <select
-							class="form-control" title="employee code" id="employee" required
-							onchange="indentGetEmployee()" th:field="*{employee}">
-							<option value="">Select Employee</option>
-							<option th:each="employee :  ${employeeList}" th:text="${employee.empCode}"
-								th:value=" ${employee.empCode}"></option>
-						</select>
-					</div>
-
-					<div class="form-group col-md-4">
-						<label for="inputAddress">Employee Name</label> <input type="text" class="form-control"
-							id="inputAddress" placeholder="employee name">
-					</div>
-					<div class="form-group col-md-4">
-						<label for="inputAddress">Department Code</label> <input type="text" class="form-control"
-							id="inputAddress" placeholder="department code" th:field="*{deptCode}">
-					</div>
-					<div class="form-group col-md-4">
-						<label for="inputAddress">Department Name</label> <input type="text" class="form-control"
-							id="inputAddress" placeholder="department name" th:field="*{deptName}">
-					</div>
-					<div class="form-group col-md-4">
-						<label for="inputAddress">Urgency</label> <input type="text" class="form-control"
-							id="inputAddress" placeholder="urgency" th:field="*{urgency}">
-					</div>
-					<div class="form-group col-md-4">
-						<label for="inputAddress">Indent Type</label> <input type="text" class="form-control"
-							id="inputAddress" placeholder="indent type" th:field="*{indentType}">
-					</div>
-					<div class="form-group col-md-4">
-						<label for="inputAddress">Purchase Type</label> <input type="text" class="form-control"
-							id="inputAddress" placeholder="purchase type">
-					</div>
-					<div class="form-group col-md-4">
-						<label for="inputAddress">Remarks</label> <input type="text" class="form-control"
-							id="inputAddress" placeholder="remarks" th:field="*{remarks}">
-					</div>
+						<!-- Default box -->
+						<div class="box">
 
 
 
+							<div class="row">
+								<!-- left column -->
 
-				</div>
-			</div>
+								<div class="col-md-12 shadow bg-white rounded" style="margin-top: 20px;">
+									<!-- general form elements -->
+									<div class="box box-primary">
+										<div class="box-header with-border">
 
-			<div class="form-border">
-				<h5>Indent Status</h5>
-				<div class="form-row">
-					<div class="form-group col-md-4">
-						<label for="inputEmail4">Approval Status</label> <input type="text" class="form-control"
-							id="inputEmail4" placeholder="approval status" th:field="*{approvalStatus1}">
-					</div>
-					<div class="form-group col-md-4">
-						<label for="inputPassword4">Date of Approval</label> <input type="date" class="form-control"
-							id="inputPassword4" placeholder="date of approval" th:field="*{approvalDate1}">
-					</div>
-					<div class="form-group col-md-4">
-						<label for="inputPassword4">Purchase Status</label> <input type="text" class="form-control"
-							id="inputPassword4" placeholder="purchase status" th:field="*{indPurStatus}">
-					</div>
-
-				</div>
-			</div>
+											<h4 class="box-title">Indent Detail</h4>
+										</div><!-- /.box-header -->
 
 
 
-			<!-- detail view   -->
+										<!-- form start -->
+										<form role="form" th:action="@{/openindent/}" method="POST"
+											th:object="${openIndent}">
+											<div class="box-body">
+
+												<div class="form-group col-md-4">
+													<label for="inputEmail4">Indent Number</label> <input type="text"
+														class="form-control" id="inputEmail4"
+														placeholder="indent number" th:field="*{indentNumber}">
+												</div>
+												<div class="form-group col-md-4">
+													<label for="inputPassword4">Indent Date</label> <input type="date"
+														class="form-control" id="" placeholder="indent date"
+														th:field="*{indentDate}">
+												</div>
+
+												<div class="form-group col-md-4">
+													<label class="form-label">Employee Code</label> <label
+														style="color: red">*</label> <select class="form-control"
+														title="employee code" id="employee" required
+														onchange="indentGetEmployee()" th:field="*{employee}">
+														<option value="">Select Employee</option>
+														<option th:each="employee :  ${employeeList}"
+															th:text="${employee.empCode}"
+															th:value=" ${employee.empCode}"></option>
+													</select>
+												</div>
 
 
-			<div class="form-border">
-				<h5>Indent Item Detail</h5>
+												<div class="form-group col-md-4">
+													<label for="inputAddress">Employee Name</label> <input type="text"
+														class="form-control" id="employeename"
+														placeholder="employee name">
+												</div>
+												<div class="form-group col-md-4">
+													<label for="inputAddress">Department Code</label> <input type="text"
+														class="form-control" id="departmentcode"
+														placeholder="department code" th:field="*{deptCode}">
+												</div>
+
+												<div class="form-group col-md-4">
+													<label for="inputAddress">Department Name</label> <input type="text"
+														class="form-control" id="departmentname"
+														placeholder="department name" th:field="*{deptName}">
+												</div>
+												<div class="form-group col-md-4">
+													<label class="form-label">Urgency</label> <label
+														style="color: red">*</label> <select class="form-control" id=""
+														title="urgency" required>
+														<option value="">Select</option>
+														<option value="Most">Most Urgent</option>
+														<option value="Normal">Normal</option>
+														<option value="Ondate">As On Date</option>
+													</select>
+												</div>
+
+												<div class="form-group col-md-4">
+													<label class="form-label">Indent Type</label> <label
+														style="color: red">*</label> <select class="form-control" id=""
+														title="urgency" required>
+														<option value="">Select</option>
+														<option value="Capex">Capex</option>
+														<option value="NonCapex">Non-Capex</option>
+														<option value="PettyRaw">Petty/Raw Material</option>
+														<option value="Trading">Trading</option>
+													</select>
+												</div>
+
+												<div class="form-group col-md-4">
+													<label for="inputAddress">Purchase Type</label> <input type="text"
+														class="form-control" id="inputAddress"
+														placeholder="purchase type">
+												</div>
+												<div class="form-group col-md-4">
+													<label for="inputAddress">Remarks</label> <input type="text"
+														class="form-control" id="inputAddress" placeholder="remarks"
+														th:field="*{remarks}">
+												</div>
+
+											</div><!-- /.box-body -->
 
 
-				<input id="_cr" name="_cr" type="hidden" value="1">
+											<!--2nd div -->
+											<div class="box">
+												<h5>Indent Status</h5>
+												<div class="box-body">
+
+													<div class="form-row">
+														<div class="form-group col-md-4">
+															<label for="inputEmail4">Approval Status</label> <input
+																type="text" class="form-control" id="inputEmail4"
+																placeholder="approval status"
+																th:field="*{approvalStatus1}">
+														</div>
+														<div class="form-group col-md-4">
+															<label for="inputPassword4">Date of Approval</label> <input
+																type="date" class="form-control" id="inputPassword4"
+																placeholder="date of approval"
+																th:field="*{approvalDate1}">
+														</div>
+														<div class="form-group col-md-4">
+															<label for="inputPassword4">Purchase Status</label> <input
+																type="text" class="form-control" id="inputPassword4"
+																placeholder="purchase status"
+																th:field="*{indPurStatus}">
+														</div>
+
+													</div>
+
+												</div>
+
+											</div>
+											<!--end 2nd div -->
 
 
+											<div class="box">
+												<h5>Indent Item Detail</h5>
+												<div class="box-body">
+													<input id="_cr" name="_cr" type="hidden" value="1">
+													<div class="table-responsive">
+														<table id="example" aria-describedby="example"
+															class="table table-striped display">
+															<thead>
+																<tr>
 
-				<div class="table-responsive">
-					<table id="example" aria-describedby="example" class="table table-striped display">
-						<thead>
-							<tr>
+																	<th scope="col" class="text-center">Item Code</th>
+																	<th scope="col" class="text-center">Item Description
+																	</th>
+																	<th scope="col" class="text-center">Qty.(In Stock)
+																	</th>
+																	<th scope="col" class="text-center">Qty to be
+																		Procured</th>
+																	<th scope="col" class="text-center">Pipeline indent
+																		Qty</th>
+																	<th scope="col" class="text-center">Indented Qty
+																	</th>
+																	<th scope="col" class="text-center">Approved
+																		Indented Qty</th>
+																	<th scope="col" class="text-center">Status</th>
+																	<th scope="col" class="text-center">Currency Code
+																	</th>
+																	<th scope="col" class="text-center">Conversion Value
+																	</th>
+																	<th scope="col" class="text-center">Item Rate</th>
+																	<th scope="col" class="text-center">Units</th>
+																	<th scope="col" class="text-center">Total value</th>
+																	<th scope="col" class="text-center">Total Value(INR)
+																	</th>
 
-								<th scope="col" class="text-center" style="width: 130px;">Item
-									Code</th>
-								<th scope="col" class="text-center" style="width: 100px;">Item
-									Description</th>
-								<th scope="col" class="text-center" style="width: 90px;">Qty.(In
-									Stock)</th>
-								<th scope="col" class="text-center" style="width: 90px;">Qty
-									to be Procured</th>
-								<th scope="col" class="text-center" style="width: 90px;">Pipeline
-									indent Qty</th>
-								<th scope="col" class="text-center" style="width: 10px;">Indented
-									Qty</th>
-								<th scope="col" class="text-center" style="width: 120px;">Approved
-									Indented Qty</th>
-								<th scope="col" class="text-center" style="width: 90px;">Status</th>
-								<th scope="col" class="text-center" style="width: 90px;">Currency
-									Code</th>
-								<th scope="col" class="text-center" style="width: 120px;">Conversion
-									Value</th>
-								<th scope="col" class="text-center" style="width: 90px;">Item
-									Rate</th>
-								<th scope="col" class="text-center" style="width: 90px;">Units</th>
-								<th scope="col" class="text-center" style="width: 90px;">Total
-									value</th>
-								<th scope="col" class="text-center" style="width: 120px;">Total
-									Value(INR)</th>
+																	<th scope="col" class="text-center">Requisition Date
+																	</th>
+																	<th scope="col" class="text-center">Status</th>
 
-								<th scope="col" class="text-center" style="width: 120px;">Requisition
-									Date</th>
-								<th scope="col" class="text-center" style="width: 120px;">Status</th>
+																	<th scope="col" class="text-center">Indent Purpose
+																	</th>
+																</tr>
+															</thead>
 
-								<th scope="col" class="text-center" style="width: 120px;">Indent
-									Purpose</th>
-							</tr>
-						</thead>
-						<!-- th:field="*{employeRequisitionDetail[__${stat.index}__].designation.desgCode}" -->
-						<tbody>
-							<tr id="addr0" th:each="row, stat :${openIndent.opeIndentDetail}">
+															<tbody>
+																<tr id="addr0" th:each="row, stat :${openIndent.opeIndentDetail}">
 
 
 
@@ -244,53 +305,60 @@
 
 								<td></td>
 							</tr>
-							<tr id='addr1' />
+																<tr id='addr1' />
 
-						</tbody>
+															</tbody>
 
 
-					</table>
-				</div>
+														</table>
+													</div>
+													<input type="hidden" id="hidden_field" th:value="${length}" />
+												</div>
 
-				<input type="hidden" id="hidden_field" th:value="${length}" />
+											</div>
 
+
+
+											<div class="box-footer" style="margin: 10px">
+												<input type="submit" value="Submit" class="btn btn-primary" />
+												<input type="reset" value="Reset" class="btn btn-danger" />
+											</div>
+
+
+										</form>
+
+
+									</div><!-- /.box -->
+									<div style="width: parent; text-align-last: right; margin:8px">
+										<a th:href="@{/openindent/list}">View all Records</a>
+									</div>
+
+
+
+
+								</div>
+								<!--end left column-->
+							</div>
+
+						</div>
+					</section>
+				</section>
 			</div>
 
-			<!-- end detail view -->
+			<div th:replace="fragments/footer :: footer">...</div>
+			<!--   <section class="content">
+        
+        </section>-->
 
-
-			<div class="row" style="margin: 10px">
-				<input type="submit" value="Submit" class="btn btn-primary" /> <input type="reset" value="Reset"
-					class="btn btn-danger" />
-			</div>
-
-		</form>
-
-		<div class="row text-right m-10">
-			<a th:href="@{/openindent/list}">view open indent list</a>
-		</div>
-	</div>
-
-
-
-
-
-
-
-
-
-
-
-	<!-- <div id="home-footer" th:replace="~{/fragments/app-fragments :: copyright}">
-        Footer
-    </div> -->
-
-
-	
-
-
+			<script>
+				let txt = $("#editDistName option:selected").text();
+				$("#employeename").val(data.empName);
+			</script>
+			<script src="../../js/jQuery-2.1.4.min.js" th:src="@{/js/jQuery-2.1.4.min.js}"></script>
+			<script src="../../js/bootstrap.min.js" th:src="@{/js/bootstrap.min.js}"></script>
+			<script src="../../js/fastclick.min.js" th:src="@{/js/fastclick.min.js}"></script>
+			<script src="../../js/app.min.js" th:src="@{/js/app.min.js}"></script>
+			<script src="../../js/demo.js" th:src="@{/js/demo.js}"></script>
 </body>
-
-
 
 </html>
